# LiteNet

./: .gitignore  DeepSHAP.ipynb  DeepSHAP.py  DeepSHAP2.ipynb  LICENSE  README.md  config.yaml  data_processing.py  environment.yml  feature_selection.py  int8_calibration.py  main.py  model.py  ntc_inception-workspace.code-workspace  onnxtest.py  pipeline.py  prune.py  prunesparse.py  pyproject.toml  requirements.txt  run_script.sh  run_script5.sh  tensorrtinference.py  top740featuresISCX.npy  top740featuresMALAYAGT.npy  train.py
.ipynb_checkpoints/: DeepSHAP_features-checkpoint.ipynb  README-checkpoint.md  config-checkpoint.yaml  feature_selection-checkpoint.py  lrp_utils-checkpoint.py  main-checkpoint.py  model-checkpoint.py  prune-checkpoint.py  prunesparse-checkpoint.py  quantize-checkpoint.py  run_script5-checkpoint.sh  tensorrtinference-checkpoint.py  train-checkpoint.py
saved_dict/: NtCNN60Features_best_model.pth  NtCNN60_best_model.pth  NtCNN739Features_best_model.pth  NtCNN_ISCXVPN2016_100Features_best_model.pth  NtCNN_ISCXVPN2016_10Features_best_model.pth  NtCNN_ISCXVPN2016_20Features_best_model.pth  NtCNN_ISCXVPN2016_20Features_best_model_pruned.pth  NtCNN_ISCXVPN2016_20Features_best_model_pruned_finetuned.onnx  NtCNN_ISCXVPN2016_20Features_best_model_pruned_finetuned.pth  NtCNN_ISCXVPN2016_30Features_best_model.pth  NtCNN_ISCXVPN2016_40Features_best_model.pth  NtCNN_ISCXVPN2016_500Features_best_model.pth  NtCNN_ISCXVPN2016_50Features_best_model.pth  NtCNN_ISCXVPN2016_5Features_best_model.pth  NtCNN_ISCXVPN2016_60Features_best_model.pth  NtCNN_ISCXVPN2016_700Features_best_model.pth  NtCNN_ISCXVPN2016_70Features_best_model.pth  NtCNN_ISCXVPN2016_739Features_best_model.pth  NtCNN_ISCXVPN2016_740Features_best_model.pth  best_model.pth  (+20 more)
