[project]
name = "litenet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.3.1",
    "annotated-types>=0.7.0",
    "asttokens>=3.0.0",
    "click>=8.3.0",
    "colored>=2.3.1",
    "coloredlogs>=15.0.1",
    "docker-pycreds>=0.4.0",
    "eval-type-backport>=0.2.2",
    "filelock>=3.20.0",
    "flatbuffers>=25.9.23",
    "fsspec>=2025.10.0",
    "gitdb>=4.0.12",
    "gitpython>=3.1.45",
    "humanfriendly>=10.0",
    "ipywidgets>=8.1.8",
    "jinja2>=3.1.6",
    "jupyterlab-widgets>=3.0.16",
    "mako>=1.3.10",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.3",
    "matplotlib>=3.10.7",
    "mdurl>=0.1.2",
    "mpmath>=1.3.0",
    "networkx>=3.5",
    "ninja>=1.13.0",
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "onnx>=1.19.1",
    "onnx-graphsurgeon>=0.5.8",
    "onnxconverter-common>=1.16.0",
    "onnxruntime>=1.23.2",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "polygraphy>=0.49.26",
    "protobuf>=6.33.1",
    "psutil>=7.1.3",
    "ptflops>=0.7.5",
    "py-spy>=0.4.1",
    "pydantic>=2.12.4",
    "pytools>=2025.2.5",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "sentry-sdk>=2.44.0",
    "setproctitle>=1.3.7",
    "shap>=0.49.1",
    "smmap>=5.0.2",
    "sympy>=1.14.0",
    "tensorrt>=10.14.1.48.post1",
    "thop>=0.1.1.post2209072238",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchinfo>=1.8.0",
    "torchstat>=0.0.7",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "triton>=3.5.1",
    "ultralytics-thop>=2.0.18",
    "wandb>=0.23.0",
    "widgetsnbextension>=4.0.15",
]
